исправление структуры ответа
